--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
     </section>
 
     <!-- DIAGRAM -->
-    <section class="diagram" id="diagram">
+    <section class="diagram py-5" id="diagram">
       <div class="container py-3">
         <div class="row">
           <div class="col-12 text-center">
@@ -306,7 +306,7 @@
           <div class="col-md-4 mt-5 mt-md-0">
             <div class="lm-obj position-relative">
               <h3 class="position-absolute text-center">
-                <span class="bg-bright-gray"> ARTIFACTOY CE </span>
+                <span class="bg-bright-gray"> ARTIFACTORY CE </span>
               </h3>
               <div class="content one-advantage-content">
                 <p class="text">
@@ -316,7 +316,7 @@
                   flexibility of JFrog Artifactory for Conan to the C/C++ world.
                 </p>
                 <a
-                  href="https://bintray.com/jfrog/product/JFrog-Artifactory-Cpp-CE/view"
+                  href="https://docs.conan.io/en/latest/uploading_packages/artifactory_ce.html"
                   class="big-btn bg-blue white"
                 >
                   Learn More >
@@ -358,7 +358,7 @@
         <div class="row">
           <div class="col-12">
             <h2 class="white d-flex justify-content-center">
-              <div class="position-relative"><img src="img/letter.png" alt="Sign Up" class="position-absolute letter"></div>
+              <div class="position-relative"><img data-src="img/letter.png" alt="Sign Up" class="position-absolute letter lazy"></div>
               <span>SIGN ME UP FOR RELEASE UPDATES</span>
             </h2>
             <div class="mktoFormWrapper">
