add signup section to all of the pages

--- a/downloads.html
+++ b/downloads.html
@@ -576,6 +576,31 @@ sudo apt-get install jfrog-artifactory-cpp
       </div>
     </section>
 
+
+    <!-- SIGN UP -->
+    <section class="sign-up py-5 bg-blue white text-center" id="signUp">
+      <div class="container">
+        <div class="row">
+          <div class="col-12">
+            <h2 class="white d-flex justify-content-center">
+              <div class="position-relative"><img data-src="img/letter.png" alt="Sign Up" class="position-absolute letter lazy"></div>
+              <span>SIGN ME UP FOR RELEASE UPDATES</span>
+            </h2>
+            <div class="mktoFormWrapper">
+              <!-- FOOTER FORM HERE -->
+              <script src="https://leap.jfrog.com/js/forms2/js/forms2.min.js"></script>
+              <div class="d-flex justify-content-center pt-3">
+                <form id="mktoForm_1479" class="text-center">
+                </form>
+              </div>
+              <script>MktoForms2.loadForm("https://leap.jfrog.com", "256-FNZ-187", 1479);</script>
+            </div>
+
+          </div>
+        </div>
+      </div>
+    </section>
+
     <!-- FOOTER -->
     <footer
       id="siteFooter"
