docker command fix

--- a/downloads.html
+++ b/downloads.html
@@ -489,8 +489,8 @@ sudo apt-get install jfrog-artifactory-cpp
                          data-placement="top">
                       </a>
                       <textarea class="position-absolute" id="dockerCommand">
-docker run --name artifactory -d -p 8081:8081 -p 8082:8082 releases
-docker.jfrog.io/jfrog/artifactory-cpp-ce:latest
+docker run --name artifactory -d -p 8081:8081 -p 8082:8082
+releases-docker.jfrog.io/jfrog/artifactory-cpp-ce:latest
                       </textarea>
                     </div>
                     <!-- / DOKCER -->
