--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
               </p>
               <div class="downloads-cta arrow-cta">
                 <div class="button_cont">
-                  <a href="downloads.html" class="example_f cta bg-green">
+                  <a href="downloads.html" class="example_f cta bg-green" id="download_btn_middle">
                     <span>
                       Download
                     </span>
@@ -1074,7 +1074,7 @@
                 <div class="col-sm-3">
                   <h4 class="blue mb-1">GET</h4>
                   <ul>
-                    <li><a href="downloads.html">
+                    <li><a href="downloads.html" id="download_btn_bottom">
                         Download
                       </a></li>
                     <li><a href="https://conan.io/center">
