--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -343,7 +343,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
             <div class="col-sm-3">
               <h4 class="blue mb-1">GET</h4>
               <ul>
-                <li><a href="downloads.html">
+                <li><a href="downloads.html" id="download_btn_bottom">
                     Download
                   </a></li>
                 <li><a href="https://conan.io/center">
