--- a/terms-conditions.html
+++ b/terms-conditions.html
@@ -226,7 +226,7 @@ The look and feel of the Service is copyright ©2018 JFrog. All rights reserved.
             <div class="col-sm-3">
               <h4 class="blue mb-1">GET</h4>
               <ul>
-                <li><a href="downloads.html">
+                <li><a href="downloads.html" id="download_btn_bottom">
                     Download
                   </a></li>
                 <li><a href="https://conan.io/center">
