--- a/downloads.html
+++ b/downloads.html
@@ -249,6 +249,7 @@
                       <a class="cn-box cn-action cn-copy"
                          data-toggle="tooltip"
                          data-placement="top"
+                         data-os="arch_aur_homepage"
                          data-copy-value="yay -S conan">
                       </a>
                     </div>
@@ -267,7 +268,7 @@
                          Any OS: From Source
                       </div>
                       <!-- ACTION -->
-                      <a href="https://github.com/conan-io/conan" target="_blank" class="cn-box cn-action cn-link">
+                      <a href="https://github.com/conan-io/conan" target="_blank" data-os="github" class="cn-box cn-action cn-link">
                       </a>
                     </div>
                     <!-- / GITHUB -->
