align text above conan side cta

--- a/downloads.html
+++ b/downloads.html
@@ -109,9 +109,11 @@
       <img src="img/downloads-hero-bg-new.png"
            class="position-absolute hero-bg downloads-hero-bg d-none d-xl-inline d-only-hero-bg"
            alt="JFrog Conan">
-      <div class="row">
-        <div class="col-12 py-5">
-          <h2 class="font-weight-bold text-center">Downloads</h2>
+      <div class="container">
+        <div class="row">
+          <div class="col-12 py-5">
+            <h2 class="font-weight-bold text-center">Downloads</h2>
+          </div>
         </div>
       </div>
     </section>
@@ -274,8 +276,9 @@
                     <!-- / GITHUB -->
 
                   </div>
+                   <div class="left-downloads-spacer"></div>
                   <!-- TEXT TWO -->
-                  <div class="text text-two">
+                  <div class="text text-two pt-2 pt-md-5">
                     <p>
                       Read more about Conan installation: </br >
                       <a href="https://docs.conan.io/en/latest/installation.html">
