--- a/downloads.html
+++ b/downloads.html
@@ -398,9 +398,9 @@ yum update && yum install jfrog-artifactory-cpp-ce
                       </div>
                       <!-- ACTION -->
                       <a class="cn-box cn-action cn-download"
-                         href="https://dl.bintray.com/conan/installers/conan-win-32_1_22_3.exe"
+                         href="https://releases.jfrog.io/artifactory/artifactory-rpms/jfrog-artifactory-cpp-ce/jfrog-artifactory-cpp-ce-[RELEASE].rpm"
                          data-tech="rpm"
-                         data-href="https://dl.bintray.com/conan/installers/conan-win-32_1_22_3.exe"
+                         data-href="https://releases.jfrog.io/artifactory/artifactory-rpms/jfrog-artifactory-cpp-ce/jfrog-artifactory-cpp-ce-[RELEASE].rpm"
                          data-copy-target="textarea#artiRpm">
                       </a>
                     </div>
@@ -441,8 +441,8 @@ sudo apt-get install jfrog-artifactory-cpp
                   <!-- ACTION -->
                   <a class="cn-box cn-action cn-download"
                      data-tech="debian"
-                     href="https://releases.jfrog.io/artifactory/artifactory-pro-debs/pool/jfrog-artifactory-pro/jfrog-artifactory-pro-[RELEASE].deb"
-                     data-href="https://releases.jfrog.io/artifactory/artifactory-pro-debs/pool/jfrog-artifactory-pro/jfrog-artifactory-pro-[RELEASE].deb"
+                          href="https://releases.jfrog.io/artifactory/artifactory-debs/pool/jfrog-artifactory-cpp-ce/jfrog-artifactory-cpp-ce-[RELEASE].deb"
+                     data-href="https://releases.jfrog.io/artifactory/artifactory-debs/pool/jfrog-artifactory-cpp-ce/jfrog-artifactory-cpp-ce-[RELEASE].deb"
                      data-copy-target="textarea#artiDebian">
                   </a>
                 </div>
@@ -508,7 +508,7 @@ sudo apt-get install jfrog-artifactory-cpp
                       </a>
                       <textarea class="position-absolute" id="dockerCommand">
 docker run --name artifactory -d -p 8081:8081 -p 8082:8082
-releases-docker.jfrog.io/jfrog/artifactory-cpp-ce:latest
+dl.bintray.com/jfrog/artifactory-cpp-ce:latest
                       </textarea>
                     </div>
                     <!-- / DOKCER -->
