meta tags title description canonical

--- a/index.html
+++ b/index.html
@@ -2,16 +2,20 @@
 <html lang="en">
 
   <head>
+    <!-- META -->
     <meta charset="UTF-8" />
     <meta
-      name="viewport"
-      content="width=device-width, initial-scale=1, shrink-to-fit=no"
+    name="viewport"
+    content="width=device-width, initial-scale=1, shrink-to-fit=no"
     />
+    <meta name="title" content="Conan by JFrog - the C / C++ Package Manager for Developers">
+    <meta name="description" content="Conan is an open source, decentralized and multi-platform package manager that allows you to create and share all your native binaries.">
     <link
-      rel="shortcut icon"
-      type="image/png"
-      href="favicon.png"
+    rel="shortcut icon"
+    type="image/png"
+    href="favicon.png"
     />
+    <link rel="alternate" href="https://conan.io" hreflang="en" />
     <title>C/C++ Open Source Package Manager</title>
     <link
       rel="canonical"
