--- a/downloads.html
+++ b/downloads.html
@@ -2,15 +2,26 @@
 <html lang="en">
 
   <head>
-    <meta charset="UTF-8">
-    <meta name="viewport"
-          content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <link rel="shortcut icon"
-          type="image/png"
-          href="favicon.png" />
+    
+    <!-- META -->
+    <meta charset="UTF-8" />
+    <meta
+    name="viewport"
+    content="width=device-width, initial-scale=1, shrink-to-fit=no"
+    />
+    <meta name="title" content="Conan by JFrog - the C / C++ Package Manager for Developers">
+    <meta name="description" content="Conan is an open source, decentralized and multi-platform package manager that allows you to create and share all your native binaries.">
+    <link
+    rel="shortcut icon"
+    type="image/png"
+    href="favicon.png"
+    />
+    <link rel="alternate" href="https://conan.io" hreflang="en" />
     <title>C/C++ Open Source Package Manager</title>
-    <link rel="canonical"
-          href="https://conan.io/downloads.html" />
+    <link
+      rel="canonical"
+      href="https://conan.io"
+    />
 
     <!-- FONT -->
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,500,600,700&display=swap"
